--- a/about.html
+++ b/about.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="OM_sagar_feedback_master_css.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    
      <link rel="stylesheet" href="css/footer.css">
+     <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
     <body style="background-color:aliceblue;">
@@ -76,59 +80,55 @@
 
           </div>
       </nav>
-<!------------------------------------------------------------------------------------------------------------------------->
 
+<!------------------------------------------------------------------------------>
 
-
-
-
-<!-------------------------------------------->
-<h1 style="text-align: center;"> <u> About Our Company </u></button></h1>
-<div class="container" style=" height: 80%; width:100%;align-content:center">
-    <img src="Factory2.jpeg" alt="" style="height: 50%;width: 100%;">
-</div>
-
-<b><u>At Om Sagar  Textiles we are all the time concerned about the way we create wealth, the way we conduct our business and we try to be not just legally compliant but much more than that.</u></b>
-<b><u>
-<img src="Mission.png" alt="" style="width:14cm">
-</u>
-<u><img src="Production.png" alt="" style="width:14cm">
-</b></u>
-
-<div class="btn-group">
-
-  </div>
-  <nav id="navbar-example3" class="navbar navbar-light bg-light">
-    <div class="row">
-        <div class="col-2">
-            <nav class="nav nav-pills flex-column  "><p>
-                <h5><a class="nav-link" href="#item-1"><u> Mission </u> </a></h5>
-                <nav class="nav nav-pills flex-column">
-                 <h4> <a class="nav-link ms-3 my-1" href="#item-1-1">   Mission & Information </a></h4></p>
-
-                </nav>
-                <h2><a class="nav-link" href="#item-2"><u> Product </u></a></h2>
-                <nav class="nav nav-pills flex-column">
-                 <h4> <a class="nav-link ms-3 my-1" href="#item-2-1">Production (Product)</a>
-                  <a class="nav-link ms-3 my-1" href="#item-2-2">Factory Product</a></h4>
-
-                  </nav>
-              </nav>
+<div class="pt-5 pb-5">
+    <div class="container">
+      <div class="row">
+        <div class="section-head col-sm-12">
+          <h4><span>About</span> Us</h4>
+          <p>Lorem Ipsum is simply dummy text of the printing and type setting industry. Lorem Ipsum has been the industry's<br>standard dummy text ever since the 1500s, when an unknown book.</p>
         </div>
-        <h1 style="text-align: center;"> <u> About Us Section </u></button></h1>
-        <u><h3 id="item-1"> <u>Mission & Information :</u></h3></u>
-       <u> <h5 id="item-1"> <u>Vision :</u></h5></u>
-        <li> • With a strong commitment to quality and customer satisfaction, our vision encompasses the following:</li>
-        <li>  •	To be one of the most admired textile companies which follows and supports sustainable environmentally friendly processes right from cotton cultivation to Product distribution; practices high level of integrity and fairness in dealing with all the stake holders.</li>
-            <li>  •	To remain focused on developing Specialized and Technical products for safety and functional wear.</li>
-
-            </p>
-            <h5 id="item-1"> <u>Mission :</u></h5>
-            <ul>
-                <li> •	We shall pursue world- class standards in our People, Products, Processes and Performance.</li>
-                <li> •  We seek quantum growth to lead in the International and domestic market and enhance our international presence by encouraging Innovation and Nurturing Intellectual Processing.</li>
-
-                </ul>
+        <div class="col-lg-4 col-sm-6">
+          <div class="item"> <span class="icon feature_box_col_one"><i class="fa fa-globe"></i></span>
+            <h6>Modern Design</h6>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor Aenean massa.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="item"> <span class="icon feature_box_col_two"><i class="fa fa-anchor"></i></span>
+            <h6>Creative Design</h6>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor Aenean massa.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="item"> <span class="icon feature_box_col_three"><i class="fa fa-hourglass-half"></i></span>
+            <h6>Your Photoshoping</h6>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor Aenean massa.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="item"> <span class="icon feature_box_col_four"><i class="fa fa-database"></i></span>
+            <h6>Business Growth</h6>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor Aenean massa.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="item"> <span class="icon feature_box_col_five"><i class="fa fa-upload"></i></span>
+            <h6>Market Strategy</h6>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor Aenean massa.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="item"> <span class="icon feature_box_col_six"><i class="fa fa-camera"></i></span>
+            <h6>Retina Ready</h6>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor Aenean massa.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
 
 <!-- footer ------------------------------------------------------------------------------------------------>
                 <div class="footer">
