--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/footer.css">
 </head>
 <body style="background-color:aliceblue;" onload=showWarning();>
+  
   <!-- navbar---------------------------------------------------------->
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background: #0075A2;color: aliceblue;" >
       <div class="container-fluid" >
@@ -23,11 +24,11 @@
 
           <div class=" ">
               <div class="mx-auto" style="width: 600px;">
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"  aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"  aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
                                   <span class="navbar-toggler-icon"></span>
                               </button>
-
-                      <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
+                           
+                      <div class="collapse navbar-collapse " id="navbarTogglerDemo01" >
                           <ul class="nav navbar-nav navbar-right" >
                               <li class="nav-item">
                                   <a class="nav-link" aria-current="page" href="index.html">HOME</a>
@@ -73,7 +74,7 @@
                               </li>
                           </ul>
               </div>
-
+           
       </div>
   </nav>
 
@@ -86,7 +87,7 @@
   <!--Section description-->
   <p class="section-description pb-4"></p>
 
-  <div class="row">
+  <div class="container row">
 
     <!--Grid column-->
     <div class="col-lg-5 mb-4" >
@@ -144,7 +145,7 @@
     <div class="col-lg-7">
 
       <!--Google map-->
-      <div id="map-container-google-11" class="z-depth-1-half map-container-6" style="height: 400px">
+      <div id="map-container-google-11" class="z-depth-1-half map-container-6 embed-responsive embed-responsive-1by1 d-flex" style="height: 400px">
         <iframe src="https://maps.google.com/maps?q=new%20delphi&t=&z=13&ie=UTF8&iwloc=&output=embed"
           frameborder="0" height="400px" width="700px" style="border:0" allowfullscreen></iframe>
       </div>
