--- a/grey_products.html
+++ b/grey_products.html
@@ -53,7 +53,7 @@
                                   </ul>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link " href="https://github.com/Vedbhanushali/omsagar/index.html#contact">CONTACT</a>
+                                  <a class="nav-link " href="index.html#contact">CONTACT</a>
                               </li>
                               <li>
                               <li class="nav-item">
