--- a/thankyou.html
+++ b/thankyou.html
@@ -44,7 +44,7 @@
                                   </ul>
                               </li>
                               <li class="nav-item">
-                                  <a class="nav-link " href="https://github.com/Vedbhanushali/omsagar/idex.html#contact">CONTACT</a>
+                                  <a class="nav-link " href="index.html#contact">CONTACT</a>
                               </li>
                               <li>
                               <li class="nav-item">
