--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/index.css">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/footer.css">
 <link rel="stylesheet" href="css/dark_mode.css">
   </head>
@@ -15,7 +17,7 @@
         <div class="container-fluid " >
             <div class="navbar-nav me-auto mb-4 mb-lg-0">
                 <a class="container navbar-brand" href="index.html">
-                    <img src="img/OM_LOGO.png" alt="logo.png ni=ot found" height="100" width="160" class="d-inline-block align-top">
+                    <img src="img/OM_LOGO.png" alt="logo.png ni=ot found" height="100" width="160" class=" d-inline-block align-top"  >
                 </a>
             </div>
 
@@ -123,14 +125,8 @@
         </div>
     </nav>
 <!--corousal--------------------------------------------------------------->
-<div class="container">
-  <nav aria-label="breadcrumb "   >
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item active" aria-current="page">Home</li>
-      </ol>    
-  </nav>
-</div>
-    <div class="container" style="border: 5mm solid aliceblue;">
+
+    <div class="container" style="padding: 5mm;">
    
         <div class="mb-lg-4 center">
           <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -141,13 +137,25 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/TFO.jpeg" class="d-block w-100  img-fluid" alt="..." height="700px" width="1000px">
+                <img src="img/TFO.jpeg" class="d-block w-100" alt="..." height="700px" width="1000px">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 id="HeadForCarosel">It's Called TFO</h5>
+                    <p id="TextforCarosel">At the yarn stage, TFO renders improved evenness, strength and elongation the material. It also enhances the lustre and abrasion resistance of the yarn. At the fabric stage, however TFO aids in attaining higher stability, better handle, visual characteristics and improved fabric roll.</p>
+                  </div>
               </div>
               <div class="carousel-item">
-                <img src="img/machine.jpeg" class="d-block w-100  img-fluid" alt="..." height="700px" width="1000px">
+                <img src="img/machine.jpeg" class="d-block w-100" alt="..." height="700px" width="1000px">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 id="HeadForCarosel">Looms Machines</h5>
+                    <p id="TextforCarosel">A loom is a device used to weave cloth and tapestry. The basic purpose of any loom is to hold the warp threads under tension to facilitate the interweaving of the weft threads.</p>
+                  </div>
               </div>
               <div class="carousel-item">
-                <img src="img/kandi.jpeg" class="d-block w-100  img-fluid" alt="..." height="700px" width="1000px">
+                <img src="img/kandi.jpeg" class="d-block w-100" alt="..." height="700px" width="1000px">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5 id="HeadForCarosel">Manual Looms Bobbin Machine (Kandi Machine)</h5>
+                    <p id="TextforCarosel"></p>
+                  </div>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"  data-bs-slide="prev">
@@ -204,46 +212,57 @@
 
 
 <!-- Managment Team--------------------------------->
-<h1 class="text-center heading ">Managment Team</h1><br>
-<div class="container ">
-  <div class="table-responsive">
-     <table width="1000px" class="text-center heading table">
-       <tr class="text-center heading ">
-          <td>
-            <ul class="navbar-nav ml-auto nav-flex-icons">
-              <li class="nav-item avatar">
-                <a class="nav-link p-0" href="#">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0  img-fluid"
-                   alt="avatar image" height="100">
-                 <p></p>
-                 <p><b>"Smit Kakadiya"</b></p>
-                 <p><b>Mobile NO:7874688779</b></p></a>
-
-          </td>
-          <td>
-            <ul class="navbar-nav ml-auto nav-flex-icons">
-              <li class="nav-item avatar">
-                <a class="nav-link p-0" href="#">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0 img-fluid"
-                   alt="avatar image" height="100">
-                 <p></p>
-                 <p><b>"Kishor Anghan"</b></p>
-                 <p><b>Mobile No:9825296500</b></p></a>
-        </td>
-        <td>
-          <ul class="navbar-nav ml-auto nav-flex-icons">
-            <li class="nav-item avatar">
-              <a class="nav-link p-0" href="#">
-                <img src="https://mdbootstrap.com/img/Photos/Avatars/avatar-5.jpg" class="rounded-circle z-depth-0 img-fluid"
-                alt="avatar image" height="100">
-                <p></p>
-                <p><b>"Vijay Kakadiya"</b></p>
-                <p><b>Mobile No:9638856770</b></p></a>
-        </td>
-       </tr>
-        </table>
+<h1 class="text-center heading ">Managment Team</h1><br><br>
+<div class="container">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <div class="navbar-nav ml-auto nav-flex-icons">
+          <div class="nav-item avatar text-center card1">
+            <img class="im" src="img/Smit.jpeg" alt="Smit" class="profile-pic" height="150" width="150" style="object-fit:cover; object-position: 100% 0">
+            <h2>Smit Kakadiya</h2>
+            <p class="title">Partner With Company</p>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a><br>
+            <p><button>Contact</button></p>
+            <p></p>
+          </div>
+        </div>
+        
+      </div>
+      <div class="col-sm">
+       <div class="nav-item avatar">
+         <div class="nav-link p-0 text-center card1">
+          <img class="im"src="img/Kishor.jpeg" alt="Kishor" class="profile-pic" height="150" width="150" style="object-fit:cover; object-position: 100% 0" >
+          <h2>Kishor Anghan</h2>
+          <p class="title">Head Of Comany</p>
+          <a href="#"><i class="fa fa-twitter"></i></a>
+          <a href="#"><i class="fa fa-instagram"></i></a>
+          <a href="#"><i class="fa fa-facebook"></i></a><br>
+          <p><button>Contact</button></p>
+          <p></p>
+         </div>
+       </div>
+      </div>
+      <div class="col-sm">
+        <div class="navbar-nav ml-auto nav-flex-icons">
+          <div class="nav-item avatar text-center card1">
+            <img class="im" src="img/Vijay.jpeg" alt="Vijay" class="profile-pic" height="150" width="150" style="object-fit:cover; object-position: 100% 0">
+            <h2>Vijay Kakadiya</h2>
+            <p class="title">Partner With Comany</p>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a><br>
+            <p><button>Contact</button></p>
+            <p></p>
+          </div>
+        </div>
       </div>
     </div>
+  </div><br>
+
+</div>
 <div class="container position-relative" id="contact">
 <section class="section pb-5" >
   <!--Section heading-->
@@ -310,7 +329,7 @@
 
       <!--Google map-->
       <div id="map-container-google-11" class="z-depth-1-half map-container-6 embed-responsive embed-responsive-1by1 d-flex " style="height: 400px">
-        <iframe src="https://maps.google.com/maps?q=new%20delphi&t=&z=13&ie=UTF8&iwloc=&output=embed"
+        <iframe src="https://maps.google.com/maps?width=700&amp;height=400&amp;hl=en&amp;q=Diamond Nagar,Surat &amp;t=k&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
           frameborder="0" height="400px" width="700px" style="border:0" allowfullscreen></iframe>
       </div>
 
@@ -324,13 +343,17 @@
         </div>
 
         <div class="col-md-4">
-          <a class="btn-floating blue accent-1"><i class="fas fa-phone"></i></a>
+          <a class="btn-floating blue accent-1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+          </svg></i></a>
           <p></p>
           <p>Mon - Fri, 8:00-22:00</p>
         </div>
 
         <div class="col-md-4">
-          <a class="btn-floating blue accent-1"><i class="fas fa-envelope"></i></a>
+          <a class="btn-floating blue accent-1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+            <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
+          </svg></a>
           <p>info@gmail.com</p>
           <p>sale@gmail.com</p>
         </div>
