--- a/index.html
+++ b/index.html
@@ -286,34 +286,36 @@
           <br>
 
           <!--Body-->
+          <form class="" action="javascript:sendMail()" method="post">
           <div class="md-form">
-
-            <input type="text" id="form-name" class="form-control">
             <label for="form-name"><b>Your name</b></label>
+            <input type="text" id="form-name" class="form-control">
+
           </div>
 
           <div class="md-form">
-
-            <input type="text" id="form-email" class="form-control">
             <label for="form-email"><b>Your Email</b></label>
+            <input type="text" id="form-email" class="form-control">
+
           </div>
 
           <div class="md-form">
-
-            <input type="text" id="form-Subject" class="form-control">
             <label for="form-Subject"><b>Subject</b></label>
+            <input type="text" id="form-subject" class="form-control">
+
           </div>
 
           <div class="md-form">
-
-            <textarea id="form-text" class="form-control md-textarea" rows="3"></textarea>
             <label for="form-text"><b>Enter Your Text Here</b></label>
+            <textarea id="form-text" class="form-control md-textarea" rows="3"></textarea>
+
           </div>
 
           <div class="text-center mt-4">
-            <button type="button" class="btn btn-success" >Submit</button>
+            <!-- <button type="button" class="btn btn-success" >Submit</button> -->
+            <input type="button" class="btn btn-success" value="Send" onclick="sendMail()" />
           </div>
-
+          </form>
         </div>
 
       </div>
@@ -408,9 +410,33 @@
         </script>
   </body>
   <!--add jquery for cart-->
-  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-
-  <script src="javascript/cart.js"></script>
-  //jquery CDN
+  <!-- <script src="https://smtpjs.com/v3/smtp.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script>
+  function sendMail(){
+    var Mname = $('#form-name').val();
+    var Memail = $('#form-email').val();
+    var Msub = $('#form-subject').val();
+    var Mtext = $('#form-text').val();
+    var Mbody = 'Details Name: '+Mname+'<br>Email: '+Memail+'<br>Text: '+Mtext;
+      Email.send({
+      // Host : "smtp.gmail.com",
+      // Username : "omsagar6654@gmail.com",
+      SecureToken: "127e16a9-a597-41f7-9323-7251ac5e1842",
+      To : '19ce005@charusat.edu.in',
+      From : "omsagar6654@gmail.com",
+      Subject : "New Mail from " + Mname + " - "+Msub,
+      Body : Mbody
+    }).then(
+      message =>{
+          if(message=='OK'){
+            alert('Thank you, your email has been send Successfully');
+          } else {
+            alert('Error in sending email. Try again..');
+          }
+      }
+    );
+  }
+  </script>
 </html>
